# pre-commit-tool

./: .pre-commit-config.yaml  .yamllint  README.md  bumpver.toml  pyproject.toml
.github/workflows/: build.yaml  check.yaml
src/pre_commit_tool/: __init__.py  main.py  simplecli.py
