[project]
name = "pre-commit-tool"
version = "0.1.8"
description = "Very simple human-friendlier wrapper around pre-commit"
readme = "README.md"
authors = [
    { name = "jmknoble", email = "jmknoble@pobox.com" }
]
license = { file = "LICENSE" }
keywords = [
    "cli",
    "git",
    "pre-commit",
]
classifiers = [  # https://pypi.org/classifiers/
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/jmknoble/pre-commit-tool"

[project.scripts]
pre-commit-tool = "pre_commit_tool.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bumpver>=2024.1130",
    "invoke>=2.2.0",
    "ruff>=0.7.2",
]

[tool.hatch.build.targets.sdist]
# https://hatch.pypa.io/latest/config/build/#file-selection
#
# include = []
exclude = [
    ".[!.]*",
    "DEVELOPING.md",
    "build",
    "dist",
    "docs",
    "examples",
    "tests",
    "tests.*",
    "util",
    "*.egg-info",
]
